@@ -1,4 +1,4 @@
-.\" RCSid $Id: dctimestep.1,v 1.14 2016/08/30 14:47:20 greg Exp $"
+.\" RCSid $Id: dctimestep.1,v 1.15 2019/03/01 01:00:03 greg Exp $"
 .TH DCTIMESTEP 1 12/09/09 RADIANCE
 .SH NAME
 dctimestep - compute annual simulation time-step(s) via matrix multiplication
@@ -119,7 +119,7 @@ The
 option may be used to specify a file or a set of output files
 to use rather than the standard output.
 If the given specification contains a '%d' format string, this
-will be replaced by the time step index, starting from 1.
+will be replaced by the time step index, starting from 0.
 In this way, multiple output pictures may be produced,
 or separate result vectors (one per time step).
 .PP
